<?xml version="1.0"?>
<package>
  <name>QuadCommander</name>
  <version>0.0.0</version>
  <description>The QuadCommander package</description>
  <maintainer email="tuckerhaydon@todo.todo">tuckerhaydon</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>mg_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>mg_msgs</run_depend>

  <export>
  </export>
</package>
